tests/error/array/set_not_same_type.mml
[|true; false|].(1) <- (3)
